ARCHi-16: Improve handling code, improve code documentation